// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:image image as form item 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    style="position: relative;"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  颜色
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-static"
          >
            <div
              class="cxd-Form-control"
            >
              <div
                class="cxd-ImageField cxd-ImageField--thumb"
              >
                <div
                  class="cxd-Image cxd-Image--thumb no-border"
                >
                  <div
                    class="cxd-Image-thumbWrap"
                  >
                    <div
                      class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
                    >
                      <img
                        class="cxd-Image-image"
                        src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:basic 1`] = `
<div>
  <div
    class="cxd-ImageField cxd-ImageField--thumb show"
  >
    <div
      class="cxd-Image cxd-Image--thumb"
    >
      <div
        class="cxd-Image-thumbWrap"
      >
        <div
          class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
        >
          <img
            class="cxd-Image-image b"
            src="https://www.baidu.com/img/bd_logo1.png"
          />
        </div>
      </div>
      <div
        class="cxd-Image-info"
      >
        <div
          class="cxd-Image-title"
          title="图片"
        >
          图片
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:enlargeAble & originalSrc & enlargeTitle & showToolbar 1`] = `
<div>
  <div
    class="cxd-ImageField cxd-ImageField--thumb"
  >
    <div
      class="cxd-Image cxd-Image--thumb"
    >
      <div
        class="cxd-Image-thumbWrap"
      >
        <div
          class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
        >
          <img
            class="cxd-Image-image"
            src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
          />
        </div>
        <div
          class="cxd-Image-overlay"
        >
          <a
            data-position="bottom"
            data-tooltip="查看大图"
            target="_blank"
          >
            <icon-mock
              classname="icon icon-view"
              icon="view"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:enlargeAble & originalSrc & enlargeTitle & showToolbar: Gallery 1`] = `
<div>
  <div
    class="cxd-ImageField cxd-ImageField--thumb"
  >
    <div
      class="cxd-Image cxd-Image--thumb"
    >
      <div
        class="cxd-Image-thumbWrap"
      >
        <div
          class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
        >
          <img
            class="cxd-Image-image"
            src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
          />
        </div>
        <div
          class="cxd-Image-overlay"
        >
          <a
            data-position="bottom"
            data-tooltip="查看大图"
            target="_blank"
          >
            <icon-mock
              classname="icon icon-view"
              icon="view"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:href 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-ImageField cxd-ImageField--thumb"
          >
            <a
              class="cxd-Link"
              href="https://github.com/baidu/amis"
              target="_blank"
              title=""
            >
              <div
                class="cxd-Image cxd-Image--thumb"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
                  >
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg"
                    />
                  </div>
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:title & imageCaption 1`] = `
<div>
  <div
    class="cxd-ImageField cxd-ImageField--thumb"
  >
    <div
      class="cxd-Image cxd-Image--thumb"
    >
      <div
        class="cxd-Image-thumbWrap"
      >
        <div
          class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
        >
          <img
            class="cxd-Image-image"
            src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
          />
        </div>
      </div>
      <div
        class="cxd-Image-info"
      >
        <div
          class="cxd-Image-title"
          title="这是标题"
        >
          这是标题
        </div>
        <div
          class="cxd-Image-caption"
          title="这是一段说明"
        >
          这是一段说明
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:width & height 1`] = `
<div>
  <div
    class="cxd-ImageField cxd-ImageField--thumb"
  >
    <div
      class="cxd-Image cxd-Image--thumb"
    >
      <div
        class="cxd-Image-thumbWrap"
      >
        <div
          class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
          style="height: 200px; width: 200px;"
        >
          <img
            class="cxd-Image-image"
            src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_400,l_1,f_jpg,q_80"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:images images:basic 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-ImagesField"
          >
            <div
              class="cxd-Images"
            >
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
                  >
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
                  >
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692942/d8e4992057f9.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
                  >
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693148/1314a2a3d3f6.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
                  >
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693379/8f2e79f82be0.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
                  >
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693566/552b175ef11d.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cxd-Divider cxd-Divider--dashed cxd-Divider--horizontal"
          />
          <div
            class="cxd-ImagesField"
          >
            <div
              class="cxd-Images"
            >
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
                  >
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
                  >
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692942/d8e4992057f9.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
                  >
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693148/1314a2a3d3f6.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
                  >
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693379/8f2e79f82be0.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
                  >
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693566/552b175ef11d.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:images images:enlargeAble & originalSrc & source & title & description 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-ImagesField"
          >
            <div
              class="cxd-Images"
            >
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
                  >
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                  <div
                    class="cxd-Image-overlay"
                  >
                    <a
                      data-position="bottom"
                      data-tooltip="查看大图"
                      target="_blank"
                    >
                      <icon-mock
                        classname="icon icon-view"
                        icon="view"
                      />
                    </a>
                  </div>
                </div>
                <div
                  class="cxd-Image-info"
                >
                  <div
                    class="cxd-Image-title"
                    title="图片1"
                  >
                    图片1
                  </div>
                  <div
                    class="cxd-Image-caption"
                    title="图片1的描述"
                  >
                    图片1的描述
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
                  >
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692942/d8e4992057f9.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                  <div
                    class="cxd-Image-overlay"
                  >
                    <a
                      data-position="bottom"
                      data-tooltip="查看大图"
                      target="_blank"
                    >
                      <icon-mock
                        classname="icon icon-view"
                        icon="view"
                      />
                    </a>
                  </div>
                </div>
                <div
                  class="cxd-Image-info"
                >
                  <div
                    class="cxd-Image-title"
                    title="图片2"
                  >
                    图片2
                  </div>
                  <div
                    class="cxd-Image-caption"
                    title="图片2的描述"
                  >
                    图片2的描述
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1"
                  >
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693148/1314a2a3d3f6.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                  <div
                    class="cxd-Image-overlay"
                  >
                    <a
                      data-position="bottom"
                      data-tooltip="查看大图"
                      target="_blank"
                    >
                      <icon-mock
                        classname="icon icon-view"
                        icon="view"
                      />
                    </a>
                  </div>
                </div>
                <div
                  class="cxd-Image-info"
                >
                  <div
                    class="cxd-Image-title"
                    title="图片3"
                  >
                    图片3
                  </div>
                  <div
                    class="cxd-Image-caption"
                    title="图片3的描述"
                  >
                    图片3的描述
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
